--- a/mobile/package.json
+++ b/mobile/package.json
@@ -26,13 +26,17 @@
     "expo-updates": "~0.5.4",
     "graphql": "^15.5.1",
     "jwt-decode": "^3.1.2",
+    "moment": "^2.29.1",
     "react": "16.13.1",
     "react-dom": "16.13.1",
     "react-native": "~0.63.4",
+    "react-native-date-picker": "^3.3.2",
     "react-native-fast-image": "^8.3.7",
     "react-native-gesture-handler": "~1.10.2",
+    "react-native-google-places-autocomplete": "^2.3.0",
     "react-native-image-crop-picker": "^0.36.2",
     "react-native-paper": "^4.9.2",
+    "react-native-placesearch": "^3.0.3",
     "react-native-reanimated": "~2.1.0",
     "react-native-safe-area-context": "3.2.0",
     "react-native-screens": "~3.0.0",
