--- a/mobile/package.json
+++ b/mobile/package.json
@@ -9,7 +9,9 @@
   "dependencies": {
     "@apollo/client": "^3.3.20",
     "@react-native-async-storage/async-storage": "^1.13.0",
+    "@react-native-community/hooks": "^2.8.1",
     "@react-native-community/masked-view": "0.1.10",
+    "@react-native-seoul/masonry-list": "^1.1.3",
     "@react-navigation/bottom-tabs": "^5.11.11",
     "@react-navigation/native": "^5.9.4",
     "@react-navigation/stack": "^5.14.5",
@@ -20,6 +22,7 @@
     "axios": "^0.21.1",
     "expo": "~41.0.1",
     "expo-image-picker": "~10.1.4",
+    "expo-media-library": "^13.0.3",
     "expo-secure-store": "~10.1.0",
     "expo-splash-screen": "~0.10.2",
     "expo-status-bar": "~1.0.4",
@@ -36,18 +39,25 @@
     "react-native-gesture-handler": "~1.10.2",
     "react-native-google-places-autocomplete": "^2.3.0",
     "react-native-image-crop-picker": "^0.36.2",
+    "react-native-image-gallery": "^2.1.5",
+    "react-native-masonry-layout": "^1.0.6",
+    "react-native-masonry-list": "^2.16.1",
     "react-native-pager-view": "^5.4.0",
     "react-native-paper": "^4.9.2",
     "react-native-placesearch": "^3.0.3",
-    "react-native-reanimated": "~2.1.0",
+    "react-native-reanimated": "^2.2.4",
     "react-native-safe-area-context": "3.2.0",
     "react-native-screens": "~3.0.0",
+    "react-native-snap-carousel": "^3.9.1",
     "react-native-super-grid": "^4.1.3",
+    "react-native-swipe-gestures": "^1.0.5",
     "react-native-tab-view": "^3.1.1",
     "react-native-unimodules": "~0.13.3",
     "react-native-vector-icons": "^8.1.0",
     "react-native-web": "^0.17.1",
     "react-redux": "^7.2.4",
+    "recoil": "^0.5.2",
+    "recyclerlistview": "^3.0.5",
     "redux": "^4.1.0",
     "redux-devtools-extension": "^2.13.9",
     "reselect": "^4.0.0"
@@ -56,6 +66,7 @@
     "@babel/core": "^7.9.0",
     "@types/react": "~16.9.35",
     "@types/react-native": "~0.63.2",
+    "@types/react-native-image-gallery": "^2.1.1",
     "typescript": "~4.0.0"
   },
   "private": true,
